--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,106 +2,125 @@ body{
     color: white;
     background-color: lightslategrey;
     height: 100%;
+    font-size: 20px;
+    max-width: 1200px;
+    padding: 10px;
+    box-shadow: 1px 1px 6px;
+    margin: auto;
 }
-
-.main-menu{
+header{
+    background-color: darkslategray;
+    max-width:400px;
+}
+.wrapper_header-main{
+    display: flex;
+    justify-content: space-between;
+}
+.menu{
+    margin: auto;
+    padding: 10px;
+}
+.menu_name{
+    display: inline-block;
+    margin: 5px;
+    letter-spacing:10px;
+    text-transform: uppercase;
+}
+.photo-resume{
+    display: inline-block;
+    max-width: 350px;
+}
+.main_menu{
     list-style: none;
-    box-shadow: 1px 1px 6px; 
-    text-align: center;
-    
+    border: 2px solid #ccc;
+    margin: 20px;
+    padding: 0;
 }
-.main-menu li{
-    display: inline;
-   
-}
-
-.main-menu li a{
+.main_menu li a{
     display: inline-block;
     color: white;
-    font-weight: bold;
-    text-align: center;
-    padding: 16px 16px;
+    padding: 8px 8px;
     text-decoration: none;
 }
-.main-menu li a:hover {
+.main_menu li a:hover {
     background-color:rgb(155, 172, 182);
-
 }
-
 .wrapper{
-margin: auto;
-width: 50%;
-padding: 10px;
-
+    margin: 10px;
+    padding: 10px;
+    max-width: 800px;
 }
-.wrap-contacts{
+.wrap_contacts{
 text-align: center;
+}
+.contacts{
+    padding: 0;
 }
 .contacts li{
     list-style: none;
 }
-
-.wrap-about-me, .my-skills, .my-code, .work-experiance, .educat, .lang{
-    box-shadow: 1px 1px 6px;
-    max-width: 700px;
+.wrap_about-me, .my_skills, .my_code, .work_experiance, .educat, .lang{
     padding: 10px;
-    margin: 30px;
 }
-
-.my-skills{
-    min-width: 500px;
+.about-me, .skills, .code, .work, .education, .languages{
+    border-bottom: 5px solid #ccc;
+    margin-bottom: 20px;
+}
+.my_code{
+    font-size: 16px;
 }
 ol li a {
-text-decoration: none;
-color: white;
+   text-decoration: none;
+   color: white;
 }
 ol li a:hover{
     color: black;
 }
-
-.wrap-footer{
-   box-shadow: 1px 1px 6px;  
+.wrap_footer{
+   box-shadow: 1px 1px 6px;
 }
-.logo-right img{
-   width:200px;
-   height: 100px;
+.footer_list{
+   list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+   padding-left: 0;
+   margin-left: 0;
 }
-
-.footer-list{
-list-style: none;
-text-align: center;
-padding-left: 0;
-margin-left: 0;
-}
-.footer-list li{
+.footer_list li{
 display: inline;
-
 }
-
-.footer-list li a{
+.footer_list li a{
     text-decoration: none;
     display: inline-block;
     color: white;
     font-weight: bold;
-    text-decoration: none;
-    
 }
-
-
-.text-right img{
-    width: 150px;
-    height: 50px;
-   margin-bottom: 30px;
-   padding-bottom: 20px;
+.text_right img, .text_left img{
+   width: 100px;
+   height: 50px;
 }
-.text-right{
-    margin-left: 80px;
-}
-.text-left{
-    margin-right: 80px;
+.text_right img{
+    margin: 5px 0;
+    padding: 5px 0;
+    height: 30px;
 }
 time{
     display: block;
     text-align: center;
     color: black;
+}
+
+@media screen and (max-width:735px){
+    .wrapper_header-main{
+        display: block;
+        margin: auto;
+    }
+    code{
+        font-size: 15px;
+    }
+    .photo-resume{
+        display: inline-block;
+        max-width: 150px;
+    }
 }
